# belleza-ser

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/routes/: health.py  leads.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  lead.py  order.py  service.py
backend/app/schemas/: lead.py
backend/app/services/payments/: __init__.py  base.py  stub.py
backend/tests/: conftest.py  test_leads.py
frontend/: Dockerfile  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/assets/css/: main.css
frontend/components/: AppFooter.vue  AppHeader.vue
frontend/components/sections/: AboutSection.vue  ContactSection.vue  EbookSection.vue  HeroSection.vue  ServiceCard.vue  ServicesSection.vue
frontend/components/ui/: CtaButton.vue  RevealOnScroll.vue
frontend/composables/: useReveal.ts  useServiceAction.ts  useWhatsApp.ts
frontend/data/: services.ts  site.ts
frontend/pages/: index.vue
frontend/server/routes/: robots.txt.ts  sitemap.xml.ts
frontend/tests/: whatsapp.test.ts
frontend/utils/: whatsapp.ts
